--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html class="no-js" lang="en">
     <head>
         <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-lightbox/0.7.0/bootstrap-lightbox.css" />
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="css/font-awesome.min.css">
         <link rel="stylesheet" href="css/bootstrap.css">
@@ -46,7 +47,7 @@
                                     <div class="port-item p-4 bg-success" data-toggle="collapse" data-target="#resume">
                                         <i class="fa fa-graduation-cap d-block"></i>Resume
                                     </div>
-                                    <div class="port-item p-4 bg-warning" data-toggle="collapse" data-target="">
+                                    <div class="port-item p-4 bg-warning" data-toggle="collapse" data-target="#work">
                                         <i class="fa fa-folder-open d-block"></i>Work
                                     </div>
                                     <div class="port-item p-4 bg-danger" data-toggle="collapse" data-target="">
@@ -172,6 +173,65 @@
                 </div>
             </div>
 
+            <!--WORK-->
+            <div id="work" class="collapse" >
+                <div class="card card-body bg-warning py-5">
+                    <h3>My Profolio</h3>
+                    <div class="card">
+                        <div class="card-body py-5">
+                            <h3>What I have build</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, et.</p>
+                            <div class="row no-gutters">
+                                <div class="col-md-3">
+                                    <a href="#demoLightbox" data-toggle="lightbox">
+                                        <img src="https://unsplash.it/1200/768.jpg?image=251" alt="" class="img-fluid">
+                                    </a>
+                                </div>
+                                <div class="col-md-3">
+                                    <a href="#demoLightbox" data-toggle="lightbox">
+                                        <img src="https://unsplash.it/1200/768.jpg?image=252" alt="" class="img-fluid">
+                                    </a>
+                                </div>
+                                <div class="col-md-3">
+                                    <a href="#demoLightbox" data-toggle="lightbox">
+                                        <img src="https://unsplash.it/1200/768.jpg?image=253" alt="" class="img-fluid">
+                                    </a>
+                                </div>
+                                <div class="col-md-3">
+                                    <a href="#demoLightbox" data-toggle="lightbox">
+                                        <img src="https://unsplash.it/1200/768.jpg?image=254" alt="" class="img-fluid">
+                                    </a>
+                                </div>
+                            </div>
+
+
+                            <div class="row no-gutters">
+                                <div class="col-md-3">
+                                    <a href="#demoLightbox" data-toggle="lightbox">
+                                        <img src="https://unsplash.it/1200/768.jpg?image=255" alt="" class="img-fluid">
+                                    </a>
+                                </div>
+                                <div class="col-md-3">
+                                    <a href="#demoLightbox" data-toggle="lightbox">
+                                        <img src="https://unsplash.it/1200/768.jpg?image=256" alt="" class="img-fluid">
+                                    </a>
+                                </div>
+                                <div class="col-md-3">
+                                    <a href="#demoLightbox" data-toggle="lightbox">
+                                        <img src="https://unsplash.it/1200/768.jpg?image=257" alt="" class="img-fluid">
+                                    </a>
+                                </div>
+                                <div class="col-md-3">
+                                    <a href="#demoLightbox" data-toggle="lightbox">
+                                        <img src="https://unsplash.it/1200/768.jpg?image=258" alt="" class="img-fluid">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!--FOOTER-->
             <footer id="main-footer" class="p-5 bg-dark text-white">
                 <div class="row">
@@ -181,14 +241,21 @@
                 </div>
             </footer>
         </div>
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-lightbox/0.7.0/bootstrap-lightbox.js"></script>
         <script src="js/jquery.min.js"></script>
         <script src="js/popper.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script>
             $('.port-item').click(function () {
-                $('.collapse').collapse('.hide');
-            })
+                $('.collapse').collapse('hide');
+            });
+
+            $('demoLightbox').lightbox('show');
+
+//            $(document).on('click','[data-toggle="lightbox"]',function (event) {
+//                event.preventDefault();
+//                $(this).ekkoLightbox();
+//            });
         </script>
     </body>
 </html>
