--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <div class="container">
-            <header class="main-header">
+            <header class="main-header col">
                 <div class="row no-gutters">
                     <div class="col-lg-3 col-md-5">
                         <img src="img/IMG_20170405_144059.jpg" alt="">
@@ -50,7 +50,7 @@
                                     <div class="port-item p-4 bg-warning" data-toggle="collapse" data-target="#work">
                                         <i class="fa fa-folder-open d-block"></i>Work
                                     </div>
-                                    <div class="port-item p-4 bg-danger" data-toggle="collapse" data-target="">
+                                    <div class="port-item p-4 bg-danger" data-toggle="collapse" data-target="#contact">
                                         <i class="fa fa-envelope d-block"></i>Contact
                                     </div>
                                 </div>
@@ -229,6 +229,47 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <!--CONTACT-->
+            <div id="contact" class="collapse my-auto">
+                <div class="card card-body bg-danger text-white py-5">
+                    <h2>Contact</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores facilis iste iure,
+                        magnam officia quibusdam. Asperiores atque earum fuga sint!.
+                    </p>
+                </div>
+                <div class="card card-body">
+                    <h3>Get in touch</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur, quibusdam.</p>
+                    <form action="">
+                        <div class="form-group">
+                            <div class="input-group input-group-lg">
+                                <span class="input-group-addon bg-danger text-white">
+                                    <i class="fa fa-user"></i>
+                                </span>
+                                <input type="text" class="form-control bg-dark text-white" placeholder="Name">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group input-group-lg">
+                                <span class="input-group-addon bg-danger text-white">
+                                    <i class="fa fa-envelope"></i>
+                                </span>
+                                <input type="email" class="form-control bg-dark text-white" placeholder="Email">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group input-group-lg">
+                                <span class="input-group-addon bg-danger text-white">
+                                    <i class="fa fa-pencil"></i>
+                                </span>
+                                <textarea rows="5" type="text" class="form-control bg-dark text-white" placeholder="Message"></textarea>
+                            </div>
+                        </div>
+                        <input type="submit" value="Send" class="btn btn-danger btn-block btn-lg">
+                    </form>
                 </div>
             </div>
 
